<resources>
    <string name="app_name">DswEvents</string>
    <string name="title_activity_manage_event">Manage Event</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_create_event">Create New Event</string>
    <string name="menu_conducted_event">Conducted Event</string>
    <string name="menu_organizer_details">Orgnizer Details</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_help">Help</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="dsw_events">DSW EVENTS</string>
    <string name="powered_by_wingers">Powered By- WINGERS</string>
  <string name="please_wait">Please wait..</string>
  <string name="event_name">Event Name</string>
  <string name="date_time">28.10.19 \n7:45AM-9:30AM</string>
  <string name="address">Jalandhar, Panjub</string>
  <string name="event_id">#9021</string>
  <string name="event_list">Event List</string>
  <string name="event_detail">Event Details</string>
  <string name="new_event">Create New Event</string>
  <string name="no_data_available">No Data Available</string>
  <string name="dsw_event">DSW Event</string>
  <string name="update">Update</string>
  <string name="update_event">Update Event</string>
  <string name="create_new_event">Create New Event</string>
  <string name="create_event">Create Event</string>
  <string name="permission_alert">Permission Alert</string>
  <string name="ok">OK</string>
  <string name="cancel">Calcel</string>
  <string name="mm_dd_yyyy">dd-mm-yyyy</string>
  <string name="hh_mm">hh:mm aa</string>
  <string name="mobile">1234567890</string>
  <string name="email">xyz@xx.com</string>
  <string name="change_image">Change Image</string>
  <string name="upload">Upload</string>
  <string name="upload_event_banner">Upload Event Banner</string>
</resources>
