<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:padding="24dp"
    app:cardElevation="3dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@drawable/bg_card_outline">

  <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/ivEventImage"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_marginStart="2dp"
      android:src="@drawable/dsw_icon"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="5dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvEventId"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:text="@string/event_id"
          android:textColor="@color/colorPrimary"
          android:textSize="@dimen/menu_text_size" />

      <View
          android:layout_width="1dp"
          android:layout_height="match_parent"
          android:layout_marginEnd="5dp"
          android:background="@color/colorPrimary" />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvEventName"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity=""
          android:text="@string/event_name"
          android:textColor="@color/colorPrimary"
          android:textSize="@dimen/menu_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="2dp"
          android:src="@drawable/ic_date_range_black_24dp" />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvEeventDateTime"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_weight="1"
          android:text="@string/date_time"
          android:textSize="12sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="2dp"
          android:src="@drawable/ic_location_on_black_24dp" />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvEventLocation"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_weight="1"
          android:text="@string/address" />
    </TableRow>

  </LinearLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>