<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <ScrollView
      android:id="@+id/text_tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:paddingTop="2dp">

      <ImageView
          android:id="@+id/ivUploadImage"
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:src="@drawable/blank_img"
          android:scaleType="fitXY"
          android:visibility="visible" />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="sans-serif"
          android:layout_marginTop="10dp"
          android:text="@string/event_name"
          android:textSize="18sp" />

      <EditText
          android:id="@+id/txtename"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textPersonName"
          android:singleLine="true"
          android:textSize="18dp" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="Event Starting Date "
          android:textSize="18sp" />

      <TextView
          android:id="@+id/textViewStartDate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="?attr/editTextBackground"
          android:ems="10"
          android:hint="@string/mm_dd_yyyy" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="Event Ending Date "
          android:textSize="18sp" />

      <TextView
          android:id="@+id/textViewEnddate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="?attr/editTextBackground"
          android:ems="10"
          android:hint="@string/mm_dd_yyyy"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="Event Starting Timing"
          android:textSize="18sp" />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/editTextBackground"
            android:ems="10"
            android:hint="@string/hh_mm"/>
      </LinearLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="Event Ending Timing"
          android:textSize="18sp" />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/editTextBackground"
            android:ems="10"
            android:hint="@string/hh_mm"/>

      </LinearLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="Contact Number"
          android:textSize="18sp" />

      <EditText
          android:id="@+id/editTxtContact"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="phone"
          android:hint="@string/mobile"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="Email Id"
          android:textSize="18sp" />

      <EditText
          android:id="@+id/editTxtEmailId"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textEmailAddress"
          android:hint="@string/email"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="30dp"
          android:text="Event Venue"
          android:textSize="18sp" />

      <EditText
          android:id="@+id/txt_venu"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textPostalAddress" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="30dp"
          android:text="Description"
          android:textSize="18sp" />

      <EditText
          android:id="@+id/txt_desc"
          android:layout_width="match_parent"
          android:layout_height="100dp"
          android:ems="10"
          android:inputType="textMultiLine"
          android:scrollbars="vertical" />
      <!--      <EditText-->
      <!--        android:id="@+id/txt_desc"-->
      <!--        android:layout_width="match_parent"-->
      <!--        android:layout_height="300dp"-->
      <!--        android:ems="10"-->
      <!--        android:background="@drawable/text_background"-->
      <!--        android:scrollbars="vertical"-->
      <!--        android:inputType="textMultiLine" />-->

      <Button
          android:id="@+id/btUpdateEvent"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginBottom="40dp"
          android:background="?android:attr/colorMultiSelectHighlight"
          android:text="@string/update_event"
          android:visibility="visible" />
    </LinearLayout>
  </ScrollView>
</LinearLayout>